<resources>
    <string name="app_name">TrainChecker</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="city_from">Город отправления</string>
    <string name="city_from_hint">Город отправления</string>
    <string name="city_to">Город назначения</string>
    <string name="start_date">Дата отправления</string>
    <string name="btn_search">Поиск поездов</string>
    <string name="menu_search">Поиск</string>
    <string name="menu_observ">Отслеживаемые</string>
    <string name="list_is_empty">Список пуст</string>
    <string name="choice_date">Выберите дату</string>
    <string name="fill_all_fields">Заполните все поля</string>
    <string name="ok">OK</string>
    <string name="write_station_name">Введите название станции</string>
    <string name="nothing_found">Ничего не найдено</string>
    <string name="test_train_num">42342</string>
    <string name="test_date">25.05.2021</string>
    <string name="test_from_to"><![CDATA[МОСКВА -> ПИТЕР]]></string>
    <string name="station">Станция</string>
    <string name="Time">Время</string>
    <string name="distance">Расстояние, км</string>
    <string name="test_station_name">Кукуеов</string>
    <string name="test_distance">1223</string>
    <string name="test_time">12:20</string>
    <string name="train_number">250</string>
    <string name="car_number">Вагон</string>
    <string name="test_mode">Ежедневно</string>
    <string name="test_type">Пассажирский</string>
    <string name="routes">Маршрут</string>
    <string name="seats">Места</string>
    <string name="app_description">
        Приложение TrainChecker поможет найти поезд по
        интересующему направлению и в нужную дату.
        Можно посмотреть маршрут и свободные билеты.
        Добавьте поезд в отслеживаемые и получайте всю информациюю быстрее.
    </string>
    <string name="tariff_test">10325 руб</string>
    <string name="cls_type_test">3Э</string>
    <string name="car_type_test">Плацкарт</string>
    <string name="date_format_pattern">dd.MM.yyyy HH:mm</string>
    <string name="city_to_hint">Город назначения</string>
    <string name="try_again">Попробовать снова</string>
    <string name="about_app">О приложении</string>
    <string name="departure">отпр</string>
    <string name="in_way">в пути</string>
    <string name="arrival">прибыт</string>
    <string name="hart_img">hart img</string>
    <string name="test_car">11</string>
    <string name="question_img">question img</string>
</resources>