<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="@dimen/parent_padding"
    tools:context=".presentation.fragment.SearchFragment">

    <TextView
        android:layout_gravity="center"
        android:gravity="center"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textStyle="bold"
        app:drawableStartCompat="@drawable/ic_launcher_foreground"
        android:text="@string/app_name" />

    <TextView
        android:id="@+id/cityFrom"
        android:drawablePadding="@dimen/text_drawable_padding"
        style="@style/appTextViewStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/city_from_hint"
        android:textAllCaps="true"
        app:drawableStartCompat="@drawable/ic_train_for_text" />

    <TextView
        android:id="@+id/cityTo"
        style="@style/appTextViewStyle"
        android:drawablePadding="@dimen/text_drawable_padding"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/city_to_hint"
        android:textAllCaps="true"
        app:drawableStartCompat="@drawable/ic_train_for_text" />

    <TextView
        android:id="@+id/tvDate"
        style="@style/appTextViewStyle"
        android:drawablePadding="@dimen/text_drawable_padding"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="8"
        android:textSize="@dimen/date_text_size"
        app:drawableStartCompat="@drawable/ic_calendar" />

    <Button
        android:id="@+id/btnSearch"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/btn_search"
        android:textSize="@dimen/m_text_size" />

</LinearLayout>