<?xml version="1.0" encoding="utf-8"?>

<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/train_margin"
        android:gravity="center"
        android:orientation="vertical">

        <TextView
            android:id="@+id/tariff"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tariff_test"
            android:textColor="@color/red"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />


        <TextView
            android:id="@+id/carType"
            android:layout_width="wrap_content"
            android:layout_marginStart="@dimen/item_margin"
            android:layout_height="wrap_content"
            android:text="@string/car_type_test"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tariff" />

        <TextView
            android:id="@+id/textCarNumber"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/train_margin"
            android:text="@string/car_number"
            app:layout_constraintStart_toStartOf="@+id/carType"
            app:layout_constraintTop_toBottomOf="@+id/carType" />

        <TextView
            android:id="@+id/carNumber"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/train_margin"
            android:text="@string/test_car"
            app:layout_constraintStart_toEndOf="@+id/textCarNumber"
            app:layout_constraintTop_toTopOf="@+id/textCarNumber" />

        <TextView
            android:id="@+id/clsType"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/train_margin"
            android:text="@string/cls_type_test"
            android:textColor="@color/green"

            app:layout_constraintStart_toStartOf="@+id/textCarNumber"
            app:layout_constraintTop_toBottomOf="@+id/carNumber" />

        <TextView
            android:id="@+id/ticketList"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/train_margin"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/tariff"
            app:layout_constraintTop_toBottomOf="@+id/tariff">

        </TextView>


    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.cardview.widget.CardView>