<?xml version="1.0" encoding="utf-8"?>

<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_margin="5dp"
        android:gravity="center">

        <TextView
            android:id="@+id/tariff"
            android:textColor="@color/red"
            android:layout_width="wrap_content"
            android:text="@string/tariff_test"
            android:layout_height="wrap_content" />

        <LinearLayout
            android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:divider="@drawable/linear_divider"
        android:dividerPadding="5dp"
        android:showDividers="middle">

        <LinearLayout
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:layout_gravity="start"
            android:layout_margin="@dimen/train_margin"
            android:orientation="vertical">

            <TextView
                android:id="@+id/carType"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/car_type_test" />

            <TextView
                android:id="@+id/carNumber"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:ems="8"
                android:text="@string/train_number" />

            <TextView
                android:id="@+id/clsType"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:ems="8"
                android:lines="1"
                android:text="@string/cls_type_test"
                android:textColor="@color/green" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/ticketList"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/train_margin"
            android:gravity="end"
            android:orientation="vertical">

        </LinearLayout>
        </LinearLayout>


    </LinearLayout>
</androidx.cardview.widget.CardView>