<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".presentation.fragment.RouteFragment">

    <TextView
        android:id="@+id/tvStations"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        style="@style/columnTitleStyle"
        android:text="@string/station"
        app:layout_constraintEnd_toStartOf="@id/tvLength"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tvLength"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        style="@style/columnTitleStyle"
        android:text="@string/distance"
        app:layout_constraintEnd_toStartOf="@id/tvTime"
        app:layout_constraintStart_toEndOf="@+id/tvStations"
        app:layout_constraintTop_toTopOf="@+id/tvStations" />


    <TextView
        android:id="@+id/tvTime"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        style="@style/columnTitleStyle"
        android:text="@string/Time"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/tvLength"
        app:layout_constraintTop_toTopOf="@+id/tvLength" />

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvLength">

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/routeRecyclerview"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            tools:listitem="@layout/item_route" />

        <com.airbnb.lottie.LottieAnimationView
            android:id="@+id/progress"
            style="@style/progressAnimStyle" />

        <TextView
            android:id="@+id/listIsEmpty"
            style="@style/tvEmptyListStyle" />

        <Button
            android:id="@+id/tryAgain"
            style="@style/btnTryAgainStyle" />


    </FrameLayout>
</androidx.constraintlayout.widget.ConstraintLayout>